<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20px"
        android:layout_marginTop="20px"
        android:layout_marginLeft="100px"
        android:text="@string/findGame"
    />
    
    <Button 
    	android:id="@+id/searchMostPopularButtonFindAGame" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_marginTop="20px"
    	android:text="@string/top10">
    </Button>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20px"
        android:layout_marginTop="30px"
        android:layout_marginBottom="30px"
        android:layout_marginLeft="150px"
        android:text="@string/or"
    />
    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110px"
        android:layout_marginBottom="10px"
        android:text="@string/criteria"
    />
    
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    >
	    <TextView
	        android:layout_width="70px"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10px"
	        android:text="@string/searchBy"
	    />  
	    <Spinner
	    	android:id="@+id/searchSpinnerFindAGame"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"   
	    	android:layout_marginLeft="10px"
	    	android:prompt="@string/select" 
	    >
	    </Spinner>
	    
	    <EditText
	    	android:id="@+id/searchfieldEditTextFindAGames"
	    	android:layout_width="140sp"
    		android:layout_height="wrap_content"
	    >
	    </EditText>
    </LinearLayout> 
    
    <Button 
    	android:id="@+id/searchCriteriaButtonFindAGame" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_marginTop="5px"
    	android:text="@string/search">
    </Button>
    
 </LinearLayout>
