<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/plainbackground"
    >
    
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:gravity="center_vertical"
    	android:layout_marginLeft="40px">
    	    	
    	<TextView
	    	android:id="@+id/TextViewLoginScreenError"
	    	android:text="@string/requiresNetwork"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"	 
	    	android:textColor="#F00"
	    	android:textSize="18px"	   
	    >    </TextView>    	
    	    	
  	    <TextView
	    	android:text="@string/username"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"	 
	    	android:textColor="#FFF"
	    	android:textSize="18px"	   
	    >    </TextView>

	    <EditText
	    	android:id="@+id/EditTextLoginScreenUsername"
	    	android:layout_width="235px"
	    	android:layout_height="wrap_content"
	    	android:maxLines="1"
	    	android:maxLength="45"
	    	android:text="test@test.is"     
	    >    </EditText>
	
	
	    <TextView
	    	android:text="@string/password"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="#FFF"
	    	android:textSize="18px"
	    >     </TextView>
	    
	    <EditText
	    	android:id="@+id/EditTextLoginScreenPassword"
	    	android:layout_width="235px"
	    	android:layout_height="wrap_content"
	    	android:maxLines="1"
	    	android:maxLength="35"
	    	android:inputType="textPassword"
	    	android:text="test"
	    >    </EditText>
	    
	    
	    <Button 
	    	android:id="@+id/ButtonLogInScreenLogIn"
	    	android:layout_width="100px"
	    	android:layout_height="wrap_content"
	    	android:text="@string/login"
	    	android:textColorHighlight="#d6dd0f"
	    >	</Button>
	    
	    <Button 
	    	android:id="@+id/ButtonLogInScreenNewUser"
	    	android:layout_width="100px"
	    	android:layout_height="wrap_content"
	    	android:text="@string/loginNewUser"
	    	android:textColorHighlight="#d6dd0f"
	    >	</Button>
	</LinearLayout>
 </LinearLayout>