<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <ListView android:id="@android:id/list"
          	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	/>
    <TextView android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noMyGames"/> 
        
   	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    >
	    <Button 
		    	android:id="@+id/ButtonMyGamesScreenUpdateMyGames"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/updateMyGames"
		    >	</Button>
	    <Button 
		    	android:id="@+id/ButtonMyGamesScreenSendGames"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/sendFinishedGames"
		    >	</Button>
    </LinearLayout>
</LinearLayout>
